--- a/www-src/app/views/user/forgot-password.html
+++ b/www-src/app/views/user/forgot-password.html
@@ -1,11 +1,11 @@
-<form name="forgotPasswordForm" class="form-signin" role="form" ng-hide="forgotPassword.sent" ng-submit="forgotPassword(user)" novalidate>
+<form name="forgotPasswordForm" class="form-signin" role="form" ng-hide="forgotPassword.sent" ng-submit="forgotPassword(user.login)" novalidate>
 	<div ng-show="hasError()" class="alert alert-dismissable alert-danger">
 		<button type="button" class="close" ng-click="closeAlert()">×</button>
-		{{user.message}}
+		{{user.login.message}}
 	</div>
 
 	<div class="form-group" ng-class="{'has-error': forgotPasswordForm.username.$invalid && !forgotPasswordForm.username.$pristine}">
-		<input class="form-control" name="username" type="email" placeholder="Email" ng-required="true" ng-model="user.username" autocomplete="off" />
+		<input class="form-control" name="username" type="email" placeholder="Email" ng-required="true" ng-model="user.login.username" autocomplete="off" />
 		<p data-ng-show="forgotPasswordForm.username.$error.required && !forgotPasswordForm.username.$pristine" class="help-block">Required</p>
 		<p data-ng-show="forgotPasswordForm.username.$error.email && !forgotPasswordForm.username.$pristine" class="help-block">Not a valid email!</p>
 	</div>
@@ -18,5 +18,5 @@
 	<h3>Please check your email</h3>
 	We've sent you an email that will allow you to reset your password quickly and easily.
 
-	<a href="user/resetpassword/{{user.token}}">Link</a>
+	<a href="user/resetpassword/{{user.login.token}}">Link</a>
 </div>
