--- a/www-src/app/views/user/login.html
+++ b/www-src/app/views/user/login.html
@@ -1,19 +1,19 @@
 <div class="row" ng-controller="UserCtrl">
 	<div class="col-md-4 col-md-offset-1">
 		<h4 class="text-center">Log in with existing account</h4>
-		<form name="loginForm" class="form-signin" role="form" ng-submit="login(user)" novalidate>
+		<form name="loginForm" class="form-signin" role="form" ng-submit="login(user.login)" novalidate>
 			<div ng-show="hasError('login')" class="alert alert-dismissable alert-danger">
 				<button type="button" class="close" ng-click="closeAlert()">×</button>
-				{{user.message}}
+				{{user.login.message}}
 			</div>
 
 			<div class="form-group" ng-class="{'has-error': loginForm.username.$invalid && !loginForm.username.$pristine}">
-				<input class="form-control" name="username" type="email" placeholder="Email" ng-required="true" ng-model="user.username" autocomplete="off" />
+				<input class="form-control" name="username" type="text" placeholder="Username/Email" ng-required="true" ng-model="user.login.username" autocomplete="off" ng-pattern="/(^([A-Za-z0-9]{3,})$)|(^\S+@\S+\.\S+$)/" />
 				<p data-ng-show="loginForm.username.$error.required && !loginForm.username.$pristine" class="help-block">Required</p>
-				<p data-ng-show="loginForm.username.$error.email && !loginForm.username.$pristine" class="help-block">Not a valid email!</p>
+				<p ng-show="loginForm.username.$error.pattern && !loginForm.username.$pristine" class="help-block">Not a valid username/email!</p>
 			</div>
 			<div class="form-group" ng-class="{'has-error': loginForm.password.$invalid && !loginForm.password.$pristine}">
-				<input class="form-control" name="password" type="password" placeholder="Password" ng-required="true" ng-model="user.password" autocomplete="off" />
+				<input class="form-control" name="password" type="password" placeholder="Password" ng-required="true" ng-model="user.login.password" autocomplete="off" />
 				<p data-ng-show="loginForm.password.$invalid && !loginForm.password.$pristine" class="help-block">Required</p>
 			</div>
 			<div class="form-group">
@@ -37,25 +37,31 @@
 
 	<div class="col-md-4 col-md-offset-2">
 		<h4 class="text-center">Register a new account</h4>
-		<form name="registerForm" class="form-signin" role="form" ng-submit="register(user)" novalidate>
+		<form name="registerForm" class="form-signin" role="form" ng-submit="register(user.register)" novalidate>
 			<div ng-show="hasError('register')" class="alert alert-dismissable alert-danger">
 				<button type="button" class="close" ng-click="closeAlert()">×</button>
-				{{user.message}}
+				{{user.register.message}}
 			</div>
 
 			<div class="form-group" ng-class="{'has-error': registerForm.username.$invalid && !registerForm.username.$pristine}">
-				<input class="form-control" name="username" type="email" placeholder="Email" ng-required="true" ng-model="user.username" autocomplete="off" />
+				<input class="form-control" name="username" type="text" placeholder="Username" ng-required="true" ng-model="user.register.username" autocomplete="off" ng-pattern="/^([A-Za-z0-9]{3,})$/" />
 				<p ng-show="registerForm.username.$error.required && !registerForm.username.$pristine" class="help-block">Required</p>
-				<p ng-show="registerForm.username.$error.email && !registerForm.username.$pristine" class="help-block">Not a valid email!</p>
+				<p ng-show="registerForm.username.$error.pattern && !registerForm.username.$pristine" class="help-block">Not a valid username!</p>
+			</div>
+
+			<div class="form-group" ng-class="{'has-error': registerForm.email.$invalid && !registerForm.email.$pristine}">
+				<input class="form-control" name="email" type="email" placeholder="Email" ng-required="true" ng-model="user.register.email" autocomplete="off" />
+				<p ng-show="registerForm.email.$error.required && !registerForm.email.$pristine" class="help-block">Required</p>
+				<p ng-show="registerForm.email.$error.email && !registerForm.email.$pristine" class="help-block">Not a valid email!</p>
 			</div>
 
 			<div class="form-group" ng-class="{'has-error': registerForm.password.$invalid && !registerForm.password.$pristine}">
-				<input class="form-control" name="password" type="password" placeholder="Password" ng-required="true" ng-model="user.password" autocomplete="off" />
+				<input class="form-control" name="password" type="password" placeholder="Password" ng-required="true" ng-model="user.register.password" autocomplete="off" />
 				<p ng-show="registerForm.password.$invalid && !registerForm.password.$pristine" class="help-block">Required</p>
 			</div>
 
 			<div class="form-group" ng-class="{'has-error': registerForm.password_confirm.$invalid && !registerForm.password_confirm.$pristine}">
-				<input class="form-control" name="password_confirm" type="password" placeholder="Confirm Password" ng-required="true" ng-model="user.password_confirm" match="user.password" autocomplete="off" />
+				<input class="form-control" name="password_confirm" type="password" placeholder="Confirm Password" ng-required="true" ng-model="user.register.password_confirm" match="user.register.password" autocomplete="off" />
 				<p ng-show="registerForm.password_confirm.$error.match && !registerForm.password_confirm.$pristine" class="help-block">Passwords do not match</p>
 			</div>
 
