Stop landing page background resizing a lot on page load

--- a/www-src/app/styles/landing.less
+++ b/www-src/app/styles/landing.less
@@ -15,6 +15,7 @@
 		}
 
 		#stats {
+			min-height: 70px;
 			margin-top: 10px;
 			margin-bottom: 10px;
 
@@ -33,6 +34,7 @@
 
 
 	#graphs {
+		min-height: 275px;
 	}
 
 	#affiliates {
