Add call-to-action to about page

--- a/www-src/app/styles/layout.less
+++ b/www-src/app/styles/layout.less
@@ -100,6 +100,21 @@ nvd3 svg {
 	padding: 30px;
 }
 
+.spacing-top {
+	margin-top: 15px;
+}
+
+.spacing-bottom {
+	margin-bottom: 15px;
+}
+
+.btn-block {
+	h1, h2, h3, h4, h5 {
+		margin-top: 2px;
+		margin-bottom: 2px;
+	}
+}
+
 .no-underline {
 	&, * {
 		text-decoration: none !important;
