--- a/www-src/app/views/about.html
+++ b/www-src/app/views/about.html
@@ -1,4 +1,4 @@
-<div class="row" id="about">
+<div class="row spacing-top" id="about">
 	<div class="col-xs-10 col-xs-offset-1">
 		<div class="row">
 			<div class="col-xs-6">
@@ -6,6 +6,14 @@
 				<p>DataPlay is a data analysis and exploratory game application which has been designed around users who may not possess expertise in data analysis or data mining, yet still have a requirement to extract meaningful stories from granular data, in order to bring that raw data to life.</p>
 			</div>
 			<div class="col-xs-6"><img src="images/about1.png" /></div>
+		</div>
+		<div class="row spacing-top spacing-bottom">
+			<div class="col-xs-8 col-xs-offset-2">
+				<a href="user/login" class="btn btn-success btn-block">
+					<h3>Get Started Now!</h3>
+					<small>Click here to create an account for FREE!</small>
+				</a>
+			</div>
 		</div>
 		<div class="row">
 			<div class="col-xs-8">
