Add names to social login buttons

--- a/www-src/app/views/user/login.html
+++ b/www-src/app/views/user/login.html
@@ -27,9 +27,9 @@
 			<div class="col-md-10 col-md-offset-1 text-center" ng-controller="UserCtrl">
 				<h4>or log in using:</h4>
 				<ul id="social-logins">
-					<li><button class="btn btn-primary social-login-btns" id="social-logins-facebook" ng-click="socialLogin('facebook')"><i class="fa fa-lg fa-facebook"></i></button></li>
-					<!-- <li><button class="btn btn-primary social-login-btns" id="social-logins-windows" ng-click="socialLogin('windows')"><i class="fa fa-lg fa-windows"></i></button></li> -->
-					<li><button class="btn btn-primary social-login-btns" id="social-logins-google" ng-click="socialLogin('google')"><i class="fa fa-lg fa-google-plus"></i></button></li>
+					<li><button class="btn btn-primary social-login-btns" id="social-logins-facebook" ng-click="socialLogin('facebook')"><i class="fa fa-lg fa-facebook"></i><div class="social-login-label">Facebook</div></button></li>
+					<!-- <li><button class="btn btn-primary social-login-btns" id="social-logins-windows" ng-click="socialLogin('windows')"><i class="fa fa-lg fa-windows"></i><div class="social-login-label">Windows</div></button></button></li> -->
+					<li><button class="btn btn-primary social-login-btns" id="social-logins-google" ng-click="socialLogin('google')"><i class="fa fa-lg fa-google-plus"></i><div class="social-login-label">Google+</div></button></button></li>
 				</ul>
 			</div>
 		</div>
