--- a/www-src/app/styles/user.less
+++ b/www-src/app/styles/user.less
@@ -10,6 +10,14 @@
 			min-height: 50px;
 			outline: none;
 			margin: 0 3px;
+			overflow: hidden;
+			margin: 1px;
+
+			.social-login-label {
+				display: inline-block;
+				margin-left: 5px;
+				font-size: 16px;
+			}
 
 			&#social-logins-facebook {
 				background-color: #3B5998;
