Add tooltip to reputation points on home page

--- a/www-src/app/views/home.html
+++ b/www-src/app/views/home.html
@@ -91,7 +91,7 @@
 						</div>
 						<div class="col-xs-2 text-center"><img class="avatar" ng-src="{{item.avatar}}" /></div>
 						<div class="col-xs-5 text-center"><small>{{item.name}}</small></div>
-						<div class="col-xs-3 gold">
+						<div class="col-xs-3 gold" title="Reputation Points">
 							<i class="glyphicon glyphicon-star"></i>
 							<span>{{item.score}}</span>
 						</div>
