--- a/www-src/app/views/charts/observations.html
+++ b/www-src/app/views/charts/observations.html
@@ -4,6 +4,10 @@
 	<div class="media" ng-repeat="obsv in userObservations" id="observation_{{obsv.xy}}">
 		<div class="row">
 			<span class="text-muted"><small>{{obsv.date}}</small></span>
+			<span class="flag">
+				<button class="btn btn-default btn-xs" title="Flag this comment as inappropriate" ng-if="!obsv.flagged" ng-click="flagObservation(obsv)"><i class="fa fa-flag"></i> Flag</button>
+				<button class="btn btn-default btn-xs disabled" title="This comment has been flagged as inappropriate" ng-if="obsv.flagged" ><i class="fa fa-flag"></i> Flagged</button>
+			</span>
 		</div>
 		<div class="row">
 			<span class="left pull-left">
@@ -17,10 +21,6 @@
 			</span>
 			<div class="media-body">
 				<h4 class="media-heading">{{obsv.user.username}} <span class="text-warning"><i class="glyphicon glyphicon-star"></i>{{obsv.user.reputation}}</span> <span class="label label-primary" ng-show="obsv.user.discoverer">Discoverer</span>
-					<span class="pull-right">
-						<button class="btn btn-default btn-xs" title="Flag this comment as inappropriate" ng-if="!obsv.flagged" ng-click="flagObservation(obsv)"><i class="fa fa-flag"></i> Flag</button>
-						<button class="btn btn-default btn-xs disabled" title="This comment has been flagged as inappropriate" ng-if="obsv.flagged" ><i class="fa fa-flag"></i> Flagged</button>
-					</span>
 				</h4>
 				{{obsv.message}}
 			</div>
