--- a/www-src/app/views/search.html
+++ b/www-src/app/views/search.html
@@ -41,7 +41,7 @@
 			</div>
 		</div>
 		<div class="row">
-			<div class="col-xs-12">
+			<div class="col-xs-12" ng-if="loading.tweets || tweets.length > 0">
 				<h4>Tweets</h4>
 				<div class="row tweets" ng-repeat="tweet in tweets | limitTo: 10">
 					<p>
@@ -51,7 +51,7 @@
 					</p>
 				</div>
 				<div class="row">
-					<div class="col-md-12" ng-if="tweets.length == 0" ng-include="'views/loader.html'"></div>
+					<div class="col-md-12 tightLoader" ng-if="loading.tweets" ng-include="'views/loader.html'"></div>
 				</div>
 			</div>
 		</div>
@@ -83,4 +83,3 @@
 		</div>
 	</div>
 </div>
-
