Add loader to chart page observations

--- a/www-src/app/styles/spinner.less
+++ b/www-src/app/styles/spinner.less
@@ -1,6 +1,14 @@
-.tightLoader {
+.loader-tight {
 	.spinner {
 		margin: 10px auto;
+	}
+}
+
+.loader-faded {
+	.spinner {
+		& > div {
+			background-color: #b4bcc2;
+		}
 	}
 }
 
