--- a/www-src/app/views/search.html
+++ b/www-src/app/views/search.html
@@ -51,7 +51,7 @@
 					</p>
 				</div>
 				<div class="row">
-					<div class="col-md-12 tightLoader" ng-if="loading.tweets" ng-include="'views/loader.html'"></div>
+					<div class="col-md-12 loader-tight" ng-if="loading.tweets" ng-include="'views/loader.html'"></div>
 				</div>
 			</div>
 		</div>
