Add hashbang to all hrefs, to allow for opening links in new tabs

--- a/www-src/app/views/about.html
+++ b/www-src/app/views/about.html
@@ -9,7 +9,7 @@
 		</div>
 		<div class="row spacing-top spacing-bottom">
 			<div class="col-xs-8 col-xs-offset-2">
-				<a href="user/login" class="btn btn-success btn-block">
+				<a href="/#!/user/login" class="btn btn-success btn-block">
 					<h3>Get Started Now!</h3>
 					<small>Click here to create an account for FREE!</small>
 				</a>
