--- a/www-src/app/views/admin/dashboard.html
+++ b/www-src/app/views/admin/dashboard.html
@@ -5,14 +5,14 @@
 			<div class="jumbotron">
 				<h1>Users</h1>
 				<p>View, Edit and Disable any user.</p>
-				<p><a class="btn btn-primary btn-lg" href="admin/users">Admin Users</a></p>
+				<p><a class="btn btn-primary btn-lg" href="/#!/admin/users">Admin Users</a></p>
 			</div>
 		</div>
 		<div class="col-md-6">
 			<div class="jumbotron">
 				<h1>Observations</h1>
 				<p>Moderate flagged comments, or review all observations.</p>
-				<p><a class="btn btn-primary btn-lg" href="admin/observations">Admin Observations</a></p>
+				<p><a class="btn btn-primary btn-lg" href="/#!/admin/observations">Admin Observations</a></p>
 			</div>
 		</div>
 	</div>
