--- a/www-src/app/views/user/forgot-password.html
+++ b/www-src/app/views/user/forgot-password.html
@@ -18,5 +18,5 @@
 	<h3>Please check your email</h3>
 	We've sent you an email that will allow you to reset your password quickly and easily.
 
-	<a href="user/resetpassword/{{user.login.token}}">Link</a>
+	<a href="/#!/user/resetpassword/{{user.login.token}}">Link</a>
 </div>
