--- a/www-src/app/views/home.html
+++ b/www-src/app/views/home.html
@@ -21,22 +21,22 @@
 					<div class="col-xs-3" ng-repeat="chart in chartsRelated | limitTo:4" id="{{chart.id}}" ng-show="hasRelatedCharts() > 0">
 						<div class="media-heading">
 							<h5>
-								<a href="overview/{{chart.url}}" ng-if="!chart.info">{{chart.title}}</a>
-								<a href="overview/{{chart.info.url}}" ng-if="chart.info">{{chart.info.title[0]}} and {{chart.info.title[1]}}</a>
+								<a href="/#!/overview/{{chart.url}}" ng-if="!chart.info">{{chart.title}}</a>
+								<a href="/#!/overview/{{chart.info.url}}" ng-if="chart.info">{{chart.info.title[0]}} and {{chart.info.title[1]}}</a>
 							</h5>
 						</div>
 					</div>
 				</div>
 				<div class="row">
 					<div class="col-xs-3" ng-repeat="chart in chartsRelated | limitTo:4" id="{{chart.id}}" ng-show="hasRelatedCharts() > 0">
-						<a class="related media-body" ng-if="!chart.info" href="{{chart.url}}">
+						<a class="related media-body" ng-if="!chart.info" href="/#!/{{chart.url}}">
 							<span ng-include="'views/charts/related/line.html'"></span>
 							<span ng-include="'views/charts/related/row.html'"></span>
 							<span ng-include="'views/charts/related/column.html'"></span>
 							<span ng-include="'views/charts/related/pie.html'"></span>
 							<span ng-include="'views/charts/related/bubble.html'"></span>
 						</a>
-						<a class="correlated media-body" ng-if="chart.info" href="{{chart.url}}">
+						<a class="correlated media-body" ng-if="chart.info" href="/#!/{{chart.url}}">
 							<span ng-include="'views/charts/correlated/line.html'"></span>
 							<span ng-include="'views/charts/correlated/column.html'"></span>
 							<span ng-include="'views/charts/correlated/scatter.html'"></span>
@@ -59,7 +59,7 @@
 				<div class="col-xs-4">
 					<h4 class="text-center">My Activity Stream</h4>
 					<div class="row myActivity" ng-if="myActivity" ng-repeat="item in myActivity">
-						{{item.pretext}}<a href="{{item.url}}">{{item.linktext}}</a>
+						{{item.pretext}}<a href="/#!/{{item.url}}">{{item.linktext}}</a>
 					</div>
 
 					<div ng-if="!myActivity" ng-include="'views/loader.html'"></div>
@@ -72,7 +72,7 @@
 					<div class="row recentObservations" ng-if="recentObservations" ng-repeat="item in recentObservations">
 						<div class="col-xs-2 text-center"><img class="avatar" ng-src="{{item.user.avatar}}" /></div>
 						<div class="col-xs-10">
-							<p><a href="{{item.url}}">{{item.text|truncate:25}}</a></p>
+							<p><a href="/#!/{{item.url}}">{{item.text|truncate:25}}</a></p>
 							<p class="italic">posted by {{item.user.name}}</p>
 						</div>
 					</div>
