--- a/www-src/app/views/overview/correlated.html
+++ b/www-src/app/views/overview/correlated.html
@@ -1,5 +1,5 @@
 <div class="col-md-4" ng-repeat="chart in chartsCorrelated" id="{{chart.info.id}}" ng-show="hasCorrelatedCharts() > 0">
-	<a class="correlated no-underline" href="{{chart.info.url}}">
+	<a class="correlated no-underline" href="/#!/{{chart.info.url}}">
 		<span ng-include="'views/charts/correlated/line.html'"></span>
 		<span ng-include="'views/charts/correlated/column.html'"></span>
 		<span ng-include="'views/charts/correlated/scatter.html'"></span>
