--- a/www-src/app/views/user/profile.html
+++ b/www-src/app/views/user/profile.html
@@ -60,7 +60,7 @@
 					<div ng-repeat="disc in creditDiscoveries">
 						<div class="circular-icon"><i class="glyphicon glyphicon-flag"></i></div>
 						<p class="profile-li">
-							<a href="{{disc.apistring}}">{{disc.title}}</a>
+							<a href="/#!/{{disc.apistring}}">{{disc.title}}</a>
 						</p>
 					</div>
 					<div ng-show="creditDiscoveries.length < 1">Nothing to show</div>
@@ -74,7 +74,7 @@
 					<div ng-repeat="disc in discoveries">
 						<div class="circular-icon"><i class="glyphicon glyphicon-flag"></i></div>
 						<p class="profile-li">
-							<a href="{{disc.apistring}}">{{disc.title}}</a>
+							<a href="/#!/{{disc.apistring}}">{{disc.title}}</a>
 						</p>
 					</div>
 					<div ng-show="discoveries.length < 1">Nothing to show</div>
@@ -88,7 +88,7 @@
 					<div ng-repeat="obsv in observations">
 						<div class="circular-icon"><i class="glyphicon glyphicon-flag"></i></div>
 						<p class="profile-li">
-							<a href="{{obsv.apistring}}">{{obsv.charttitle}}</a><br/>
+							<a href="/#!/{{obsv.apistring}}">{{obsv.charttitle}}</a><br/>
 							<span class="text-muted">{{obsv.comment}}</span>
 						</p>
 					</div>
@@ -104,5 +104,5 @@
 	<h3>Please check your email</h3>
 	We've sent you an email that will allow you to reset your password quickly and easily.
 
-	<a href="user/resetpassword/{{user.login.token}}">Link</a>
+	<a href="/#!/user/resetpassword/{{user.login.token}}">Link</a>
 </div>
