--- a/www-src/app/views/home.html
+++ b/www-src/app/views/home.html
@@ -16,38 +16,45 @@
 	<div class="row" id="credit">
 		<div class="col-xs-12">
 			<h3 class="text-center"><i class="glyphicon glyphicon-flag purple-flag"></i> Patterns awaiting your approval</h3>
-			<div class="row" id="credit">
-				<div class="row">
-					<div class="col-xs-3" ng-repeat="chart in chartsRelated | limitTo:4" id="{{chart.id}}" ng-show="hasRelatedCharts() > 0">
-						<div class="media-heading">
-							<h5>
-								<a href="/#!/overview/{{chart.url}}" ng-if="!chart.info">{{chart.title}}</a>
-								<a href="/#!/overview/{{chart.info.url}}" ng-if="chart.info">{{chart.info.title[0]}} and {{chart.info.title[1]}}</a>
-							</h5>
+			<div class="row">
+				<div class="col-xs-12" ng-if="chartsRelated && chartsRelated.length > 0">
+					<div class="row">
+						<div class="col-xs-3" ng-repeat="chart in chartsRelated | limitTo:4" id="{{chart.id}}" ng-show="hasRelatedCharts() > 0">
+							<div class="media-heading">
+								<h5>
+									<a href="/#!/overview/{{chart.url}}" ng-if="!chart.info">{{chart.title}}</a>
+									<a href="/#!/overview/{{chart.info.url}}" ng-if="chart.info">{{chart.info.title[0]}} and {{chart.info.title[1]}}</a>
+								</h5>
+							</div>
+						</div>
+					</div>
+					<div class="row">
+						<div class="col-xs-3" ng-repeat="chart in chartsRelated | limitTo:4" id="{{chart.id}}" ng-show="hasRelatedCharts() > 0">
+							<a class="related media-body" ng-if="!chart.info" href="/#!/{{chart.url}}">
+								<span ng-include="'views/charts/related/line.html'"></span>
+								<span ng-include="'views/charts/related/row.html'"></span>
+								<span ng-include="'views/charts/related/column.html'"></span>
+								<span ng-include="'views/charts/related/pie.html'"></span>
+								<span ng-include="'views/charts/related/bubble.html'"></span>
+							</a>
+							<a class="correlated media-body" ng-if="chart.info" href="/#!/{{chart.url}}">
+								<span ng-include="'views/charts/correlated/line.html'"></span>
+								<span ng-include="'views/charts/correlated/column.html'"></span>
+								<span ng-include="'views/charts/correlated/scatter.html'"></span>
+							</a>
+						</div>
+
+						<div class="col-xs-12" ng-if="!chartsRelated" ng-include="'views/loader.html'"></div>
+
+						<div class="col-md-12" ng-show="chartsRelated.length <= 0">
+							<p class="text-center text-muted">There are no charts currently awaiting approval.</p>
 						</div>
 					</div>
 				</div>
-				<div class="row">
-					<div class="col-xs-3" ng-repeat="chart in chartsRelated | limitTo:4" id="{{chart.id}}" ng-show="hasRelatedCharts() > 0">
-						<a class="related media-body" ng-if="!chart.info" href="/#!/{{chart.url}}">
-							<span ng-include="'views/charts/related/line.html'"></span>
-							<span ng-include="'views/charts/related/row.html'"></span>
-							<span ng-include="'views/charts/related/column.html'"></span>
-							<span ng-include="'views/charts/related/pie.html'"></span>
-							<span ng-include="'views/charts/related/bubble.html'"></span>
-						</a>
-						<a class="correlated media-body" ng-if="chart.info" href="/#!/{{chart.url}}">
-							<span ng-include="'views/charts/correlated/line.html'"></span>
-							<span ng-include="'views/charts/correlated/column.html'"></span>
-							<span ng-include="'views/charts/correlated/scatter.html'"></span>
-						</a>
-					</div>
-
-					<div class="col-xs-12" ng-if="!chartsRelated" ng-include="'views/loader.html'"></div>
-
-					<div class="col-md-12" ng-show="chartsRelated.length <= 0">
-						<p class="text-center text-muted">There are no charts currently awaiting approval.</p>
-					</div>
+				<div class="col-xs-12 loader-tight" ng-if="loading.charts" ng-include="'../views/loader.html'">
+				</div>
+				<div class="col-xs-12" ng-if="!loading.charts && chartsRelated.length === 0">
+					<p class="text-center text-muted">There are no charts currently awaiting approval.</p>
 				</div>
 			</div>
 		</div>
