--- a/www-src/app/styles/landing.less
+++ b/www-src/app/styles/landing.less
@@ -14,6 +14,10 @@
 			margin-bottom: 2px;
 		}
 
+			.logo {
+				margin: 0 0 30px 0;
+			}
+
 		#stats {
 			min-height: 70px;
 			margin-top: 10px;
