--- a/www-src/app/views/landing.html
+++ b/www-src/app/views/landing.html
@@ -5,7 +5,7 @@
 				<div class="col-xs-6 col-xs-offset-3">
 					<div class="row">
 						<div class="col-xs-12">
-							<img src="images/logo.png" alt="DataPlay" />
+							<img src="images/logo.png" class="logo" alt="DataPlay" />
 							<div>Join 1000s of players in the quest to discover stories within open data.</div>
 						</div>
 					</div>
