Improve visual representation of admin dashboard

--- a/www-src/app/styles/admin.less
+++ b/www-src/app/styles/admin.less
@@ -1,5 +1,13 @@
 .admin {
 
+	&.admin-dashboard {
+
+		.desc {
+			min-height: 3em;
+		}
+
+	}
+
 	td {
 		line-height: 2em;
 		vertical-align: middle;
