--- a/www-src/app/views/admin/dashboard.html
+++ b/www-src/app/views/admin/dashboard.html
@@ -1,17 +1,17 @@
-<div ng-init="bootNonAdmins()">
+<div class="admin admin-dashboard" ng-init="bootNonAdmins()">
 	<h2>Administration Dashboard</h2>
 	<div class="row">
 		<div class="col-md-6">
-			<div class="jumbotron">
-				<h1>Users</h1>
-				<p>View, Edit and Disable any user.</p>
+			<div class="jumbotron text-center">
+				<h1><i class="fa fa-users"></i></h1>
+				<p class="desc">View, edit or disable any user.</p>
 				<p><a class="btn btn-primary btn-lg" href="/#!/admin/users">Admin Users</a></p>
 			</div>
 		</div>
 		<div class="col-md-6">
-			<div class="jumbotron">
-				<h1>Observations</h1>
-				<p>Moderate flagged comments, or review all observations.</p>
+			<div class="jumbotron text-center">
+				<h1><i class="fa fa-th-list"></i></h1>
+				<p class="desc">Moderate flagged comments, or review all observations.</p>
 				<p><a class="btn btn-primary btn-lg" href="/#!/admin/observations">Admin Observations</a></p>
 			</div>
 		</div>
