--- a/www-src/app/styles/landing.less
+++ b/www-src/app/styles/landing.less
@@ -16,6 +16,7 @@
 
 			.logo {
 				margin: 0 0 30px 0;
+				max-width: 90vw;
 			}
 
 		#stats {
@@ -24,7 +25,6 @@
 			margin-bottom: 10px;
 
 			& > div {
-				height: 70px;
 				font-size: 20px;
 				line-height: 35px;
 				padding: 0;
@@ -44,7 +44,24 @@
 	#affiliates {
 		img {
 			background-color: white;
+			max-width: 90vw;
 		}
 	}
 
+}
+
+@media all and (max-width: 992px) {
+	#landingpage {
+		background-image: none;
+
+		#main {
+			[class*="col-"] {
+				padding: 5px 0 5px 0;
+			}
+		}
+	}
+
+	div.dc-chart {
+		float: initial;
+	}
 }
