--- a/www-src/app/views/landing.html
+++ b/www-src/app/views/landing.html
@@ -2,31 +2,31 @@
 	<div class="row" id="main">
 		<div class="col-xs-12">
 			<div class="row">
-				<div class="col-xs-6 col-xs-offset-3">
+				<div class="col-xs-12 col-md-6 col-md-offset-3">
 					<div class="row">
-						<div class="col-xs-12">
+						<div class="col-xs-10 col-xs-offset-1">
 							<img src="images/logo.png" class="logo" alt="DataPlay" />
-							<div>Join 1000s of players in the quest to discover stories within open data.</div>
+							<p>Join 1000s of players in the quest to discover stories within open data.</p>
 						</div>
 					</div>
 
 					<div class="row" id="stats">
-						<div class="col-xs-4">
+						<div class="col-xs-12 col-sm-4">
 							<div ng-if="stats.players">
-								{{stats.players}}<br/>
+								{{stats.players}}<br class="hidden-xs"/>
 								people playing
 							</div>
 						</div>
-						<div class="col-xs-4">
+						<div class="col-xs-12 col-sm-4">
 							<div ng-if="stats.discoveries">
-								{{stats.discoveries}}<br/>
+								{{stats.discoveries}}<br class="hidden-xs"/>
 								discoveries so far
 							</div>
 							<div ng-if="!stats.discoveries" ng-include="'views/loader.html'"></div>
 						</div>
-						<div class="col-xs-4">
+						<div class="col-xs-12 col-sm-4">
 							<div ng-if="stats.datasets">
-								{{stats.datasets}}<br/>
+								{{stats.datasets}}<br class="hidden-xs"/>
 								data sets added
 							</div>
 						</div>
@@ -50,7 +50,7 @@
 			<div class="col-xs-12"><h4>Top Rated Charts</h4></div>
 		</div>
 		<div class="row">
-			<div class="col-xs-3" ng-repeat="chart in chartsRelated | limitTo: 4">
+			<div class="col-xs-10 col-xs-offset-1 col-sm-6 col-sm-offset-0 col-md-3" ng-repeat="chart in chartsRelated | limitTo: 4">
 				<div ng-if="!chart.info">
 					{{chart.title}}
 					<span ng-include="'views/charts/related/line.html'"></span>
