--- a/www-src/app/views/home.html
+++ b/www-src/app/views/home.html
@@ -63,7 +63,7 @@
 	<div class="row" id="streams">
 		<div class="col-xs-10 col-xs-offset-1">
 			<div class="row">
-				<div class="col-xs-12 col-md-4">
+				<div class="col-xs-12 col-sm-6 col-md-4">
 					<h4 class="text-center">My Activity Stream</h4>
 					<div class="row myActivity" ng-if="myActivity" ng-repeat="item in myActivity">
 						{{item.pretext}}<a href="/#!/{{item.url}}">{{item.linktext}}</a>
@@ -74,7 +74,7 @@
 					<p class="text-center text-muted" ng-if="myActivity.length <= 0">No activity to show.</p>
 				</div>
 
-				<div class="col-xs-12 col-md-4">
+				<div class="col-xs-12 col-sm-6 col-md-4">
 					<h4 class="text-center">Recent Community Observations</h4>
 					<div class="row recentObservations" ng-if="recentObservations" ng-repeat="item in recentObservations">
 						<div class="col-xs-2 text-center"><img class="avatar" ng-src="{{item.user.avatar}}" /></div>
