--- a/www-src/app/views/admin/dashboard.html
+++ b/www-src/app/views/admin/dashboard.html
@@ -1,14 +1,14 @@
 <div class="admin admin-dashboard" ng-init="bootNonAdmins()">
 	<h2>Administration Dashboard</h2>
 	<div class="row">
-		<div class="col-md-6">
+		<div class="col-xs-10 col-xs-offset-1 col-sm-6 col-sm-offset-0">
 			<div class="jumbotron text-center">
 				<h1><i class="fa fa-users"></i></h1>
 				<p class="desc">View, edit or disable any user.</p>
 				<p><a class="btn btn-primary btn-lg" href="/#!/admin/users">Admin Users</a></p>
 			</div>
 		</div>
-		<div class="col-md-6">
+		<div class="col-xs-10 col-xs-offset-1 col-sm-6 col-sm-offset-0">
 			<div class="jumbotron text-center">
 				<h1><i class="fa fa-th-list"></i></h1>
 				<p class="desc">Moderate flagged comments, or review all observations.</p>
