Make admin pages look better on smaller screens

--- a/www-src/app/views/admin/users.html
+++ b/www-src/app/views/admin/users.html
@@ -55,10 +55,10 @@
 			</td>
 			<td class="userControls text-right">
 				<div class="btn-group">
-					<button type="button" class="btn btn-sm btn-primary" ng-click="showModal('view', user)" title="View"><i class="fa fa-search"></i></button>
-					<button type="button" class="btn btn-sm btn-info" ng-click="showModal('edit', user)" title="Edit"><i class="fa fa-pencil"></i></button>
-					<button type="button" class="btn btn-sm btn-danger" ng-click="showModal('disable', user)" ng-if="user.enabled" title="Disable"><i class="fa fa-times"></i></button>
-					<button type="button" class="btn btn-sm btn-success" ng-click="showModal('disable', user)" ng-if="!user.enabled" title="Enable"><i class="fa fa-check"></i></button>
+					<button type="button" class="btn btn-sm btn-primary col-xs-4" ng-click="showModal('view', user)" title="View"><i class="fa fa-search"></i></button>
+					<button type="button" class="btn btn-sm btn-info col-xs-4" ng-click="showModal('edit', user)" title="Edit"><i class="fa fa-pencil"></i></button>
+					<button type="button" class="btn btn-sm btn-danger col-xs-4" ng-click="showModal('disable', user)" ng-if="user.enabled" title="Disable"><i class="fa fa-times"></i></button>
+					<button type="button" class="btn btn-sm btn-success col-xs-4" ng-click="showModal('disable', user)" ng-if="!user.enabled" title="Enable"><i class="fa fa-check"></i></button>
 				</div>
 			</td>
 		</tr>
