Make footer mobile-friendly (responsive)

--- a/www-src/app/styles/layout.less
+++ b/www-src/app/styles/layout.less
@@ -55,6 +55,12 @@ nvd3 svg {
 	}
 }
 
+@media all and (max-width: 992px) {
+	.footer {
+		position: initial;
+	}
+}
+
 .home {
 	.list-group-item {
 		cursor: pointer;
