--- a/www-src/app/styles/overviewscreen.less
+++ b/www-src/app/styles/overviewscreen.less
@@ -70,3 +70,16 @@
 	margin-left: -75px;
 	margin-top: -100px;
 }
+
+@media all and (max-width: 992px) {
+	.overviewscreen {
+		padding: 0;
+
+		.section {
+			.sect-graph {
+				height: initial;
+				padding: 0;
+			}
+		}
+	}
+}
