--- a/www-src/app/views/overviewscreen.html
+++ b/www-src/app/views/overviewscreen.html
@@ -1,7 +1,7 @@
 <div class="row" ng-init="init()">
-	<div class="col-sm-9 col-xs-12">
+	<div class="col-xs-12 col-sm-9">
 		<div class="row overviewscreen">
-			<div class="col-xs-4 section" ng-repeat="sect in mainSections | limitTo: 3">
+			<div class="col-xs-12 col-sm-4 section" ng-repeat="sect in mainSections | limitTo: 3">
 				<h4 class="text-center">{{sect.title}}</h4>
 
 				<div class="loading" ng-if="sect.items.length == 0 && !sect.error" ng-include="'views/loader.html'"></div>
@@ -88,7 +88,7 @@
 		<div class="tooltip-inner"></div>
 	</div>
 
-	<div class="col-sm-3 col-xs-0">
+	<div class="col-sm-3 hidden-xs">
 		<div class="sidebar">
 			<div class="title">Overview</div>
 
