--- a/www-src/app/views/user/login.html
+++ b/www-src/app/views/user/login.html
@@ -1,5 +1,5 @@
 <div class="row" ng-controller="UserCtrl">
-	<div class="col-xs-8 col-xs-offset-2 col-md-4 col-md-offset-1">
+	<div class="col-xs-12 col-md-4 col-md-offset-1">
 		<h4 class="text-center">Log in with existing account</h4>
 		<form name="loginForm" class="form-signin" role="form" ng-submit="login(user.login)" novalidate>
 			<div ng-show="hasError('login')" class="alert alert-dismissable alert-danger">
@@ -24,7 +24,7 @@
 			</div>
 		</form>
 		<div class="row">
-			<div class="col-md-10 col-md-offset-1 text-center" ng-controller="UserCtrl">
+			<div class="col-xs-12 col-md-10 col-md-offset-1 text-center" ng-controller="UserCtrl">
 				<h4>or log in using:</h4>
 				<ul id="social-logins">
 					<li><button class="btn btn-primary social-login-btns" id="social-logins-facebook" ng-click="socialLogin('facebook')"><i class="fa fa-lg fa-facebook"></i><div class="social-login-label">&nbsp;Facebook</div></button></li>
@@ -35,7 +35,7 @@
 		</div>
 	</div>
 
-	<div class="col-xs-8 col-xs-offset-2 col-md-4 col-md-offset-2">
+	<div class="col-xs-12 col-md-4 col-md-offset-2">
 		<h4 class="text-center">Register a new account</h4>
 		<form name="registerForm" class="form-signin" role="form" ng-submit="register(user.register)" novalidate>
 			<div ng-show="hasError('register')" class="alert alert-dismissable alert-danger">
