--- a/www-src/app/views/landing.html
+++ b/www-src/app/views/landing.html
@@ -4,7 +4,7 @@
 			<div class="row">
 				<div class="col-xs-12 col-md-6 col-md-offset-3">
 					<div class="row">
-						<div class="col-xs-10 col-xs-offset-1">
+						<div class="col-xs-12">
 							<img src="images/logo.png" class="logo" alt="DataPlay" />
 							<p>Join 1000s of players in the quest to discover stories within open data.</p>
 						</div>
