Hide axis of charts on home page

--- a/www-src/app/styles/home.less
+++ b/www-src/app/styles/home.less
@@ -55,6 +55,18 @@
 		padding-left: 5px;
 		padding-right: 5px;
 	}
+
+	.dc-chart.line {
+		g.axis.x, g.axis.y {
+			display: none;
+		}
+	}
+
+	.corrChart {
+		.axis {
+			display: none;
+		}
+	}
 }
 
 .purple-flag {
