Hide chart axis on landing page

--- a/www-src/app/styles/landing.less
+++ b/www-src/app/styles/landing.less
@@ -48,6 +48,22 @@
 		}
 	}
 
+	.dc-chart.line {
+		g.axis.x, g.axis.y {
+			display: none;
+		}
+	}
+
+	.corrChart {
+		.axis {
+			display: none;
+		}
+	}
+
+	.row {
+		margin-left: 0;
+		margin-right: 0;
+	}
 }
 
 @media all and (max-width: 992px) {
