Hide chart axis of search page

--- a/www-src/app/styles/overviewscreen.less
+++ b/www-src/app/styles/overviewscreen.less
@@ -49,8 +49,8 @@
 			text-align: center;
 		}
 
-		.dc-chart.line {
-			g.axis.x, g.axis.y {
+		.dc-chart {
+			.axis {
 				display: none;
 			}
 		}
