--- a/www-src/app/views/search.html
+++ b/www-src/app/views/search.html
@@ -2,7 +2,7 @@
 	<span ng-class="{true: '', false: 'notvisible'}[totalResults > 0]">{{totalResults}} results found</span>
 </div>
 
-<div class="row">
+<div class="row searchpage">
 	<div class="col-sm-9 col-xs-12">
 		<div class="row">
 			<form novalidate>
