--- a/www-src/app/styles/search.less
+++ b/www-src/app/styles/search.less
@@ -7,6 +7,20 @@
 	padding: 5px;
 }
 
+.searchpage {
+	.dc-chart {
+		.axis {
+			display: none;
+		}
+	}
+
+	.corrChart {
+		.axis {
+			display: none;
+		}
+	}
+}
+
 .search-results {
 	min-height: 375px;
 
