Handle crediting better on the chart page

--- a/www-src/app/views/charts/info.html
+++ b/www-src/app/views/charts/info.html
@@ -1,6 +1,6 @@
 <div class="action-bar">
-	<button class="btn btn-success btn-sm" ng-click="creditChart(true)" ng-hide="info.credited || info.discredited"><span class="glyphicon glyphicon-ok"></span> Credit</button>
-	<button class="btn btn-danger btn-sm" ng-click="creditChart(false)" ng-hide="info.credited || info.discredited"><span class="glyphicon glyphicon-remove"></span> Discredit</button>
+	<button class="btn btn-success btn-sm" ng-click="creditChart(true)" ng-hide="info.credited"><span class="glyphicon glyphicon-ok"></span> Credit</button>
+	<button class="btn btn-danger btn-sm" ng-click="creditChart(false)" ng-hide="info.discredited"><span class="glyphicon glyphicon-remove"></span> Discredit</button>
 	<button class="btn btn-info btn-sm" ng-click="openAddObservationModal()"><span class="glyphicon glyphicon-comment"></span> Make observation</button>
 </div>
 
