Stop search page making requests on every keystroke

--- a/www-src/app/views/search.html
+++ b/www-src/app/views/search.html
@@ -11,8 +11,8 @@
 				</div>
 			</form>
 
-			<div class="list-group search-results" ng-show="results.length > 0">
-				<div class="row">
+			<div class="list-group search-results">
+				<div class="row" ng-if="!loading.related && results.length > 0">
 					<div class="list-group-item col-sm-4" ng-repeat="chart in chartsRelated" id="{{chart.id}}" ng-show="hasRelatedCharts() > 0">
 						<div class="media-heading">
 							<h5><a href="/#!/overview/{{chart.guid}}">{{chart.title}}</a></h5>
@@ -27,17 +27,18 @@
 					</div>
 				</div>
 
-				<div class="row">
+				<div class="row" ng-if="loading.related">
 					<div class="col-md-12" ng-show="loading.related" ng-include="'views/loader.html'"></div>
 				</div>
 
-				<div class="row show-more" ng-click="showMore()" ng-hide="rowedResults.length < rowLimit">
+				<div class="jumbotron" ng-if="!loading.related && results.length <= 0 && query.length > 0">
+					<p class="text-center">Sorry we are unable to find any search results for given request.</p>
+				</div>
+
+				<div class="row show-more" ng-click="showMore()" ng-if="!loading.related && results.length > 0">
 					<button class="col-md-6 col-md-offset-3 btn btn-default text-center">Show More</button>
 				</div>
-			</div>
 
-			<div class="jumbotron" ng-show="!loading.related && results.length <= 0 && query.length > 0">
-				<p class="text-center">Sorry we are unable to find any search results for given request.</p>
 			</div>
 		</div>
 		<div class="row">
