Change the icon for admin/observations

--- a/www-src/app/views/admin/dashboard.html
+++ b/www-src/app/views/admin/dashboard.html
@@ -10,7 +10,7 @@
 		</div>
 		<div class="col-xs-10 col-xs-offset-1 col-sm-6 col-sm-offset-0">
 			<div class="jumbotron text-center">
-				<h1><i class="fa fa-th-list"></i></h1>
+				<h1><i class="glyphicon glyphicon-comment"></i></h1>
 				<p class="desc">Moderate flagged comments, or review all observations.</p>
 				<p><a class="btn btn-primary btn-lg" href="/#!/admin/observations">Admin Observations</a></p>
 			</div>
