Build update & observation image fix.

--- a/www-src/app/views/charts.html
+++ b/www-src/app/views/charts.html
@@ -1,3 +1,5 @@
+<div class="hidden-xs hidden-sm hidden-md hidden-lg" id="observation-image" data-image="./images/observation.png"></div>
+
 <div class="charts" ng-init="init()">
 	<div class="row">
 		<div class="col-xs-12 col-md-9">
