Improve twitter feed appearance, and highlight key terms within their body

--- a/www-src/app/styles/search.less
+++ b/www-src/app/styles/search.less
@@ -46,4 +46,14 @@
 .tweets {
 	.twitter-blue { color: #55ACEE; }
 	.highlight { background-color: rgba(243, 156, 18, 0.15); }
+
+	.tweet-header {
+		margin-bottom: 0;
+		.tweet-author { font-weight: 600; }
+	}
+
+	.tweet-text {
+		/*font-style: italic;*/
+		margin-left: 17px;
+	}
 }
