--- a/www-src/app/views/search.html
+++ b/www-src/app/views/search.html
@@ -45,10 +45,10 @@
 			<div class="col-xs-12" ng-if="loading.tweets || tweets.length > 0">
 				<h4>Tweets</h4>
 				<div class="row tweets" ng-repeat="tweet in tweets | limitTo: 10">
-					<p>
+					<p class="tweet-header">
 						<i class="fa fa-twitter twitter-blue"></i>
-						<span>{{tweet.name}} (<a ng-href="https://twitter.com/{{tweet.username}}">@{{tweet.username}}</a>) said </span>
-						<span>"{{tweet.comment}}"</span>
+						<span><span class="tweet-author">{{tweet.name}}</span> (<a ng-href="https://twitter.com/{{tweet.username}}">@{{tweet.username}}</a>)</span>
+						<div class="tweet-text" ng-bind-html="tweet.comment"></div>
 					</p>
 				</div>
 				<div class="row">
