--- a/www-src/app/views/search.html
+++ b/www-src/app/views/search.html
@@ -35,7 +35,7 @@
 					<p class="text-center">Sorry we are unable to find any search results for given request.</p>
 				</div>
 
-				<div class="row show-more" ng-click="showMore()" ng-if="!loading.related && results.length > 0">
+				<div class="row show-more" ng-click="showMore()" ng-if="!loading.related && results.length > 0 && query.length > 0">
 					<button class="col-md-6 col-md-offset-3 btn btn-default text-center">Show More</button>
 				</div>
 
@@ -79,7 +79,8 @@
 				</div>
 			</div>
 
-			<div class="nothing" ng-hide="overview.length > 0"><p class="text-center text-muted">Nothing to show</p></div>
+			<div class="loader-tight loader-faded" ng-if="loading.overview" ng-include="'views/loader.html'"></div>
+			<div class="nothing" ng-if="!loading.overview && overview.length <= 0"><p class="text-center text-muted">Nothing to show</p></div>
 
 		</div>
 	</div>
