--- a/www-src/app/views/overview/correlated.html
+++ b/www-src/app/views/overview/correlated.html
@@ -1,4 +1,4 @@
-<div class="col-md-4" ng-repeat="chart in chartsCorrelated" id="{{chart.info.id}}" ng-show="hasCorrelatedCharts() > 0">
+<div class="col-md-4" ng-repeat="chart in chartsCorrelated" id="{{chart.info.id}}" ng-if="hasCorrelatedCharts() > 0">
 	<a class="correlated no-underline" href="/#!/{{chart.info.url}}">
 		<span ng-include="'views/charts/correlated/line.html'"></span>
 		<span ng-include="'views/charts/correlated/column.html'"></span>
@@ -7,12 +7,11 @@
 			<div class="well text-center">Oops! nothing to plot.</div>
 		</div>
 	</a>
-
 </div>
 
-<div class="col-md-12" ng-show="loading.correlated" ng-include="'views/loader.html'"></div>
+<div class="col-md-12" ng-if="loading.correlated" ng-include="'views/loader.html'"></div>
 
-<div class="col-md-12" ng-show="!loading.correlated && hasCorrelatedCharts() <= 0">
+<div class="col-md-12" ng-if="!loading.correlated && hasCorrelatedCharts() <= 0">
 	<div class="jumbotron">
 		<p class="text-center">Sorry we are unable to generate any Correlated data for given set.</p>
 	</div>
